Register and email confirmation

--- a/Hotel/Hotel/Hotel.csproj
+++ b/Hotel/Hotel/Hotel.csproj
@@ -7,42 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\AUTHORS.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\external\sizzle\LICENSE.txt" />
-    <Content Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\LICENSE.txt" />
+    <Compile Remove="wwwroot\admin\assets1\**" />
+    <Content Remove="wwwroot\admin\assets1\**" />
+    <EmbeddedResource Remove="wwwroot\admin\assets1\**" />
+    <None Remove="wwwroot\admin\assets1\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -57,122 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\admin\assets1\libs\alertifyjs\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\controllers\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\core\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\elements\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\helpers\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\platform\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\plugins\plugin.filler\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\scales\" />
-    <Folder Include="wwwroot\admin\assets1\libs\chart.js\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\choices.js\public\types\cypress\e2e\" />
-    <Folder Include="wwwroot\admin\assets1\libs\choices.js\public\types\cypress\integration\" />
-    <Folder Include="wwwroot\admin\assets1\libs\choices.js\public\types\cypress\plugins\" />
-    <Folder Include="wwwroot\admin\assets1\libs\choices.js\public\types\cypress\support\" />
-    <Folder Include="wwwroot\admin\assets1\libs\choices.js\public\types\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\choices.js\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-autofill\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-bs4\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-buttons\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-keytable\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-responsive\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net-select\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\external\sizzle\dist\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\datatables.net\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\flatpickr\types\" />
-    <Folder Include="wwwroot\admin\assets1\libs\flatpickr\utils\" />
-    <Folder Include="wwwroot\admin\assets1\libs\gmaps\docs\" />
-    <Folder Include="wwwroot\admin\assets1\libs\gmaps\examples\" />
-    <Folder Include="wwwroot\admin\assets1\libs\gmaps\test\" />
-    <Folder Include="wwwroot\admin\assets1\libs\gulp-rtlcss\node_modules\" />
-    <Folder Include="wwwroot\admin\assets1\libs\jquery-sparkline\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\pdfmake\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\rater-js\example\" />
-    <Folder Include="wwwroot\admin\assets1\libs\rater-js\test\" />
-    <Folder Include="wwwroot\admin\assets1\libs\swiper\types\modules\" />
-    <Folder Include="wwwroot\admin\assets1\libs\table-edits\src\" />
-    <Folder Include="wwwroot\admin\assets1\libs\twitter-bootstrap-wizard\examples\" />
     <Folder Include="wwwroot\assets\imgs\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-autofill-bs4\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-autofill\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-bs4\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-buttons-bs4\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-buttons\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-keytable-bs4\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-keytable\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-responsive-bs4\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-responsive\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-select-bs4\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net-select\node_modules\jquery\jquery.slim.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\external\sizzle\sizzle.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\jquery.min.js" />
-    <None Include="wwwroot\admin\assets1\libs\datatables.net\node_modules\jquery\jquery.slim.min.js" />
   </ItemGroup>
 
 </Project>
